app-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
  ports:
    - port: 8085
      protocol: TCP
      targetPort: 8085
