app-manifests/ingress-with-ipwhitelist.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ipwhitelist
  namespace: myapp
spec:
  ipWhiteList:
    sourceRange:
      - 127.0.0.1/32
      - 0.0.0.0/1
      - 128.0.0.0/1

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: myapp
  annotations:
    kubernetes.io/ingress.class: traefik
    "traefik.ingress.kubernetes.io/router.middlewares": myapp-ipwhitelist@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: myapp-service
                port:
                  number: 8085
