app-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  # annotations:
  #   kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: myapp-service
                port:
                  number: 8085
